--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/ws": "^8.5.3",
     "express": "^4.18.0",
     "uuid": "^8.3.2",
+    "winston": "^3.7.2",
     "ws": "^8.6.0"
   },
   "devDependencies": {
