--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "@tsconfig/node16/tsconfig.json",
-  "compilerOptions": { "outDir": "dist", "watch": true},
+  "compilerOptions": {
+    "outDir": "dist",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
+  },
   "include": ["src"],
   "exclude": ["node_modules"],
   "compileOnSave": true
