--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/uuid": "^8.3.4",
     "@types/ws": "^8.5.3",
     "express": "^4.18.0",
+    "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.7.0",
     "uuid": "^8.3.2",
     "winston": "^3.7.2",
