--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/node": "^17.0.42",
     "@types/uuid": "^8.3.4",
     "@types/ws": "^8.5.3",
+    "dotenv": "^16.0.1",
     "express": "^4.18.0",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.7.0",
