fixed api server bugs + added error handling

--- a/environment/production/variables.env
+++ b/environment/production/variables.env
@@ -2,3 +2,5 @@ SECURE_SERVER=true
 CERT_PATH=../../ssl/certificate.pem
 CERT_KEY_PATH=../../ssl/private.pem
 WORKERS_COUNT=1
+API_SERVER_PORT=9191
+ALLOWED_ORIGINS=https://theinstashare.com
