--- a/environment/dev/variables.env
+++ b/environment/dev/variables.env
@@ -2,3 +2,5 @@ SECURE_SERVER=false
 CERT_PATH=ssl/certificate.pem
 CERT_KEY_PATH=ssl/private.pem
 WORKERS_COUNT=1
+API_SERVER_PORT=9191
+ALLOWED_ORIGINS=*
