--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "gaurav10610@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.0",
     "reflect-metadata": "^0.1.13",
@@ -34,11 +35,12 @@
     "ws": "^8.6.0"
   },
   "devDependencies": {
+    "@tsconfig/node16": "^1.0.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/node": "^17.0.42",
     "@types/uuid": "^8.3.4",
     "@types/ws": "^8.5.3",
-    "@types/node": "^17.0.42",
-    "@tsconfig/node16": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "eslint": "^8.14.0",
