added ipc message support + multiple code refactoring

--- a/environment/dev/variables.env
+++ b/environment/dev/variables.env
@@ -3,5 +3,7 @@ CERT_PATH=ssl/certificate.pem
 CERT_KEY_PATH=ssl/private.pem
 WORKERS_COUNT=1
 API_SERVER_PORT=9191
+WS_PORT=9090
 ALLOWED_ORIGINS=*
 USER_CONNECT_EVENT=group
+LOG_LEVEL=debug
