--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:prod": "NODE_ENV=production nodemon dist/main.js",
     "compile": "npx tsc",
     "js:artifacts": "SET NODE_ENV=dev && node dist/main.js",
-    "lint": "npx eslint . --fix",
+    "lint": "prettier --write .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "browser:test": "nodemon --watch public --ext js,css,html --exec node dist/test/browser/index.js"
   },
@@ -28,31 +28,32 @@
   "author": "gaurav10610@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.0",
-    "reflect-metadata": "^0.1.13",
-    "tsyringe": "^4.7.0",
-    "uuid": "^8.3.2",
-    "winston": "^3.7.2",
+    "cors": "2.8.5",
+    "dotenv": "16.0.1",
+    "express": "4.18.0",
+    "reflect-metadata": "0.1.13",
+    "tsyringe": "4.7.0",
+    "uuid": "8.3.2",
+    "winston": "3.7.2",
     "ws": "^8.6.0"
   },
   "devDependencies": {
-    "@tsconfig/node16": "^1.0.2",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/node": "^17.0.42",
-    "@types/uuid": "^8.3.4",
-    "@types/ws": "^8.5.3",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
-    "eslint": "^8.14.0",
-    "nodemon": "^2.0.15",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "@tsconfig/node16": "1.0.2",
+    "@types/cors": "2.8.12",
+    "@types/express": "4.17.13",
+    "@types/node": "17.0.42",
+    "@types/uuid": "8.3.4",
+    "@types/ws": "8.5.3",
+    "@typescript-eslint/eslint-plugin": "5.21.0",
+    "@typescript-eslint/parser": "5.21.0",
+    "eslint": "8.14.0",
+    "nodemon": "2.0.15",
+    "prettier": "2.7.1",
+    "ts-node": "10.7.0",
+    "typescript": "4.6.3"
   },
   "optionalDependencies": {
-    "bufferutil": "^4.0.6",
-    "utf-8-validate": "^5.0.9"
+    "bufferutil": "4.0.6",
+    "utf-8-validate": "5.0.9"
   }
 }
